VO-3507 - Fixed wrapping text on Vehicle Details

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -29,6 +29,12 @@ body.lang_es {
     .btn-save-changes {
       width: 120px;
     }
+
+    .sidebar .notice-bar {
+      .paired-body {
+        width: 80%;
+      }
+    }
   }
 
 
