--- a/app/styles/lang/_fr_CA.scss
+++ b/app/styles/lang/_fr_CA.scss
@@ -54,6 +54,12 @@ body.lang_fr_CA {
       }
 
     }
+
+    .sidebar .notice-bar {
+      .paired-body {
+        width: 80%;
+      }
+    }
   }
 
   /* Analytics */
